--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,14 @@
 <div class="product-list">
-    <article **ngFor="let product of products">
+    <article *ngFor="let product of products">
 
-        <strong></strong>
-        <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos</p>
+        <strong>{{ product.title }}</strong>
+        <p>{{product.description}}</p>
         
-        <a href="#">Acessar</a>
+        <a routerLink="/product/{{product._id}}">Acessar</a>
     </article>
 
     <div class="actions">
-        <button>Anterior</button>
-        <button>Proximo</button>
+        <button (click)="pagePrev()">Anterior</button>
+        <button (click)="pageNext()">Proximo</button>
     </div>
 </div>
