--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,1 +1,5 @@
-<p>product works!</p>
+<div class="product-info">
+    <h1>{{ product.title }}</h1>
+    <p>{{ product.description }}</p>
+    <p>URL: <a href={{product.url}}>{{ product.url }}</a></p>
+</div>
